if !BINARY_EXTRAFLIB
if !BINARY_TRACKFLIB

SUBDIRS = mapidump

endif
endif

if !BINARY_EXTRAFLIB
if BINARY_TRACKFLIB

SUBDIRS = mapidump

endif
endif

if BINARY_EXTRAFLIB
if !BINARY_TRACKFLIB

SUBDIRS = mapidump

endif
endif

if BINARY_EXTRAFLIB
if BINARY_TRACKFLIB

SUBDIRS = mapidump appmon

endif
endif
